Atualizar para Java 21, corrigir pacotes, adicionar CORS, configurar deploy para GitHub Pages